--- a/comprar.html
+++ b/comprar.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra - Pekitas Ecotienda</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <header class="bg-primary text-white text-center py-3">
+    <header class="bg-footer text-white text-center py-3">
+        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
         <h1>Compra</h1>
         <nav class="nav justify-content-center">
             <a class="nav-link text-white" href="index.html">Inicio</a>
@@ -24,38 +26,29 @@
             <button id="finalizar-compra" class="btn btn-success">Finalizar Compra</button>
         </div>
     </main>
-    <footer class="pie-pagina text-white text-center py-3">
+    <footer class="pie-pagina">
         <div class="grupo-1">
             <div class="box">
                 <figure>
-                    <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Pekitas Logo">
+                    <a href="#">
+                        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda">
+                    </a>
                 </figure>
-                <h6>Síguenos</h6>
+            </div>
+            <div class="box">
+                <span class="redes_title">SIGUENOS</span>
                 <div class="red-social">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="fab fa-facebook"></a>
+                    <a href="#" class="fab fa-instagram"></a>
+                    <a href="#" class="fab fa-twitter"></a>
+                    <a href="#" class="fab fa-youtube"></a>
                 </div>
-            </div>
-            <div class="box">
-                <h6>Enlaces Rápidos</h6>
-                <ul>
-                    <li><a href="#">Nosotros</a></li>
-                    <li><a href="#">Contacto</a></li>
-                    <li><a href="#">Política de Privacidad</a></li>
-                </ul>
-            </div>
-            <div class="box">
-                <h6>Contacto</h6>
-                <p>Email: info@pekitas.com</p>
-                <p>Tel: +123 456 789</p>
             </div>
         </div>
         <div class="grupo-2">
-            <small><a href="terminos.html">Términos y Condiciones</a> &copy; 2024 Pekitas Ecotienda - Todos los Derechos Reservados</small>
+            <small><a href="./terminos.de.uso.html"><strong>Terminos y condiciones de uso</strong></a> &copy; 2024 <b>Pekitas Ecotienda</b> - Todos los Derechos Reservados </small>
         </div>
     </footer>
-    <script src="Scripts/comprar.js"></script>
+    <script src="scripts/comprar.js"></script>
 </body>
 </html>
