--- a/index.html
+++ b/index.html
@@ -9,14 +9,28 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header class="bg-footer text-white text-center py-3 no-fringe">
         <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
         <h1>Pekitas Ecotienda</h1>
-        <nav class="nav justify-content-center bg-footer">
-            <a class="nav-link text-white" href="index.html">Inicio</a>
-            <a class="nav-link text-white" href="carrito.html">Carrito</a>
+        <nav class="navbar navbar-expand-lg navbar-light bg-footer">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white" href="index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="carrito.html">
+                                <i class="fas fa-shopping-cart"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
     </header>
     <main class="container my-4">
@@ -48,7 +62,36 @@
             <small><a href="./terminos.de.uso.html"><strong>Terminos y condiciones de uso</strong></a> &copy; 2024 <b>Pekitas Ecotienda</b> - Todos los Derechos Reservados </small>
         </div>
     </footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="promoModal" tabindex="-1" aria-labelledby="promoModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-custom">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="promoModalLabel">Promoción</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <div style="position: relative; width: 100%; height: 0; padding-top: 83.8298%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform;">
+              <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAGL-VNhq5Q/Ohu39Dtysbmp8haQCHFsew/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+            </div>
+            <a href="https://www.canva.com/design/DAGL-VNhq5Q/Ohu39Dtysbmp8haQCHFsew/view?utm_content=DAGL-VNhq5Q&utm_campaign=designshare&utm_medium=embeds&utm_source=link" target="_blank" rel="noopener"></a>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="scripts/productos.js"></script>
     <script src="scripts/main.js"></script>
+    <script>
+      // Mostrar el modal al cargar la página
+      document.addEventListener('DOMContentLoaded', () => {
+        const promoModal = new bootstrap.Modal(document.getElementById('promoModal'));
+        promoModal.show();
+      });
+    </script>
 </body>
 </html>
