--- a/carrito.html
+++ b/carrito.html
@@ -24,7 +24,7 @@
             </div>
             <p id="total" class="text-end total-descuentos">Total: $0</p>
             <div class="text-end">
-                <button id="pagar" class="btn btn-success">Proceder al Pago</button>
+                <button id="pagar" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#comprarModal">Proceder al Pago</button>
             </div>
         </main>
         <footer class="pie-pagina mt-auto">
