--- a/comprar.html
+++ b/comprar.html
@@ -10,45 +10,61 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <header class="bg-footer text-white text-center py-3">
-        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
-        <h1>Compra</h1>
-        <nav class="nav justify-content-center">
-            <a class="nav-link text-white" href="index.html">Inicio</a>
-            <a class="nav-link text-white" href="carrito.html">Carrito</a>
-        </nav>
-    </header>
-    <main class="container my-4">
-        <div id="resumen-compra" class="mb-4">
-            <!-- Resumen de la compra será añadido aquí -->
-        </div>
-        <div class="text-end">
-            <button id="finalizar-compra" class="btn btn-success">Finalizar Compra</button>
-        </div>
-    </main>
-    <footer class="pie-pagina">
-        <div class="grupo-1">
-            <div class="box">
-                <figure>
-                    <a href="#">
-                        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda">
-                    </a>
-                </figure>
+    <div class="d-flex flex-column min-vh-100">
+        <header class="bg-footer text-white text-center py-3 no-fringe">
+            <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
+            <h1>Pekitas Ecotienda Finalizar Compra</h1>
+            <nav class="navbar navbar-expand-lg navbar-light bg-footer">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="index.html">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="carrito.html">
+                                    <i class="fas fa-shopping-cart"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        </header>
+        <main class="container my-4 flex-grow-1">
+            <div id="resumen-compra" class="mb-4">
+                <!-- Resumen de la compra será añadido aquí -->
             </div>
-            <div class="box">
-                <span class="redes_title">SIGUENOS</span>
-                <div class="red-social">
-                    <a href="#" class="fab fa-facebook"></a>
-                    <a href="#" class="fab fa-instagram"></a>
-                    <a href="#" class="fab fa-twitter"></a>
-                    <a href="#" class="fab fa-youtube"></a>
+            <div class="text-end">
+                <button id="finalizar-compra" class="btn btn-success">Finalizar Compra</button>
+            </div>
+        </main>
+        <footer class="pie-pagina mt-auto">
+            <div class="grupo-1">
+                <div class="box">
+                    <figure>
+                        <a href="#">
+                            <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda">
+                        </a>
+                    </figure>
+                </div>
+                <div class="box">
+                    <span class="redes_title">SIGUENOS</span>
+                    <div class="red-social">
+                        <a href="#" class="fab fa-facebook"></a>
+                        <a href="#" class="fab fa-instagram"></a>
+                        <a href="#" class="fab fa-twitter"></a>
+                        <a href="#" class="fab fa-youtube"></a>
+                    </div>
                 </div>
             </div>
-        </div>
-        <div class="grupo-2">
-            <small><a href="./terminos.de.uso.html"><strong>Terminos y condiciones de uso</strong></a> &copy; 2024 <b>Pekitas Ecotienda</b> - Todos los Derechos Reservados </small>
-        </div>
-    </footer>
+            <div class="grupo-2">
+                <small><a href="./terminos.de.uso.html"><strong>Terminos y condiciones de uso</strong></a> &copy; 2024 <b>Pekitas Ecotienda</b> - Todos los Derechos Reservados </small>
+            </div>
+        </footer>
+    </div>
     <script src="scripts/comprar.js"></script>
 </body>
 </html>
