--- a/carrito.html
+++ b/carrito.html
@@ -14,13 +14,33 @@
         <header class="bg-footer text-white text-center py-3 no-fringe">
             <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
             <h1>Carrito de Compras</h1>
-            <nav class="nav justify-content-center bg-footer">
-                <a class="nav-link text-white" href="index.html">Inicio</a>
+            <nav class="navbar navbar-expand-lg navbar-light bg-footer">
+                <div class="container-fluid">
+                    <a class="navbar-brand text-white" href="index.html">Inicio</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav ms-auto">
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="index.html#sobre-nosotros">Sobre Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="index.html#productos">Productos</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="carrito.html">
+                                    <i class="fas fa-shopping-cart"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
         <main class="container my-4 flex-grow-1">
             <div id="items-carrito" class="mb-4">
-                
+                <!-- Los productos se añadirán aquí dinámicamente con JavaScript -->
             </div>
             <p id="total" class="text-end total-descuentos">Total: $0</p>
             <div class="text-end">
