--- a/comprar.html
+++ b/comprar.html
@@ -23,6 +23,9 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
+                                <a class="nav-link text-white" href="index.html#sobre-nosotros">Sobre Nosotros</a> <!-- Enlace añadido -->
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link text-white" href="carrito.html">
                                     <i class="fas fa-shopping-cart"></i>
                                 </a>
