--- a/comprar.html
+++ b/comprar.html
@@ -23,7 +23,10 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="index.html#sobre-nosotros">Sobre Nosotros</a> <!-- Enlace añadido -->
+                                <a class="nav-link text-white" href="index.html#sobre-nosotros">Sobre Nosotros</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-white" href="index.html#productos">Productos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-white" href="carrito.html">
@@ -34,7 +37,6 @@
                     </div>
                 </div>
             </nav>
-        </header>
         </header>
         <main class="container my-4 flex-grow-1">
             <div id="resumen-compra" class="mb-4">
