mejorando estilos parte uno

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="carrito.html">
-                                <i class="fas fa-shopping-cart"></i>
+                                <i class="fas fa-shopping-cart"></i> Carrito
                             </a>
                         </li>
                     </ul>
@@ -40,19 +40,22 @@
         </nav>
     </header>
     
-    <!-- Sección Sobre Nosotros -->
-    <section id="sobre-nosotros" class="seccion-bienvenida container my-5">
-        <h2 class="text-left">Bienvenidos a Pekitas Ecotienda</h2>
-        <h3 class="text-left">Sumate a un cambio natural</h3>
-        <div class="row align-items-center">
+    <section id="nosotros" class="sobre-nosotros">
+        <div class="container">
+          <div class="row align-items-center">
             <div class="col-md-6">
-                <img src="/homesprai.jpeg" alt="Pekitas Ecotienda Home Spray" class="img-fluid">
+              <img src="/homesprai.jpeg" alt="Sobre Nosotros" class="img-fluid">
             </div>
             <div class="col-md-6">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus lacinia odio vitae vestibulum vestibulum. Cras venenatis euismod malesuada. Etiam ac magna non libero pretium consectetur. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+              <h2 class="titulo-nosotros">Sobre Nosotros</h2>
+              <p class="texto-nosotros">
+                Pekitas Ecotienda es más que una simple tienda, es una visión y un compromiso con el futuro de nuestro planeta. Fundada por la emprendedora y especialista en artes visuales, Gabriela Rodríguez, Pekitas Ecotienda es el resultado de una pasión por la belleza natural y un profundo respeto por el medio ambiente. Gabriela, con su amplio conocimiento y experiencia en las artes visuales, ha creado una gama de productos que no solo son estéticamente agradables, sino también amigables con el medio ambiente. Cada producto en Pekitas Ecotienda es natural, sostenible y biodegradable y veganos, lo que significa que no solo es bueno para ti, sino también para nuestro planeta. En Pekitas Ecotienda, creemos que cada pequeña elección que hacemos puede tener un gran impacto en el mundo que nos rodea. Por eso, nos esforzamos por ofrecer productos que te ayuden a vivir de una manera más sostenible y consciente. Desde cosméticos hasta productos de cuidado personal, cada artículo en nuestra tienda ha sido cuidadosamente seleccionado y creado con el objetivo de reducir nuestro impacto en el medio ambiente.
+              </p>
             </div>
+          </div>
         </div>
-    </section>
+      </section>
+      
 
     <main class="container my-4">
         <h2 class="text-center">Nuestros Productos</h2>
