--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
           <div class="row align-items-center">
             <div class="col-md-6">
-              <img src="/homesprai.jpeg" alt="Sobre Nosotros" class="img-fluid">
+              <img src="https://res.cloudinary.com/dpcpcnqmq/image/upload/v1722728852/homesprai_sekfvv.jpg" alt="Sobre Nosotros" class="img-fluid">
             </div>
             <div class="col-md-6">
               <h2 class="titulo-nosotros">Sobre Nosotros</h2>
