--- a/carrito.html
+++ b/carrito.html
@@ -29,13 +29,17 @@
                                 <a class="nav-link text-white" href="index.html#productos">Productos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-white" href="carrito.html">
-                                    <i class="fas fa-shopping-cart"></i>
-                                </a>
+                                <a class="nav-link text-white" href="index.html#contacto">Contacto</a>
                             </li>
+                            <li class="nav-item">
+                                <li class="nav-item">
+                                    <a class="nav-link text-white" href="carrito.html">
+                                        Carrito <i class="fas fa-shopping-cart"></i>
+                                    </a>
+                                </li>
+                                
                         </ul>
                     </div>
-                </div>
             </nav>
         </header>
         <main class="container my-4 flex-grow-1">
