--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 </head>
 <body>
     <header class="bg-footer text-white text-center py-3 no-fringe">
-        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo" class="logo">
+        <figure>
+            <a href="#">
+                <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda" class="logo">
+            </a>
+        </figure>
         <h1>Pekitas Ecotienda</h1>
         <nav class="navbar navbar-expand-lg navbar-light bg-footer">
             <div class="container-fluid">
@@ -34,7 +38,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-white" href="carrito.html">
-                                Carrito <i class="fas fa-shopping-cart"></i>
+                                Carrito <i class="fas fa-shopping-cart"></i> <span id="cart-count" class="badge bg-secondary">0</span>
                             </a>
                         </li>
                     </ul>
@@ -82,7 +86,7 @@
     <section id="contacto" class="contacto my-5">
         <div class="container">
             <h2 class="text-center mb-4">Contacto</h2>
-            <form action="enviar_formulario.php" method="post" class="mx-auto" style="max-width: 600px;">
+            <form id="contactoForm" class="mx-auto" style="max-width: 600px;">
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
@@ -117,7 +121,7 @@
             <div class="box">
                 <figure>
                     <a href="#">
-                        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda">
+                        <img src="https://i.ibb.co/d4QdwVQ/pekitas-logo-1.webp" alt="Logo de Pekitas Ecotienda" class="logo">
                     </a>
                 </figure>
             </div>
@@ -158,5 +162,6 @@
     
     <script src="scripts/productos.js"></script>
     <script src="scripts/main.js"></script>
+    <script src="scripts/formulario.js"></script> <!-- Enlace al nuevo archivo JS -->
 </body>
 </html>
