--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -89,4 +89,4 @@
     <script src="scripts/carrito.js"></script>
     <script src="scripts/formulario.js"></script> <!-- Enlace al nuevo archivo JS -->
 </body>
-</html>
+</html> -->
