--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
             </ul>
         </nav>
     </main>
+    <section id="imagen-promocional" class="my-5 text-center">
+        <div class="container">
+            <img src="https://res.cloudinary.com/dpcpcnqmq/image/upload/v1722792525/Agua_de_rosas_qkxkmu.png" alt="Imagen Promocional" class="img-fluid rounded">
+        </div>
+    </section>
     
     <section id="contacto" class="contacto my-5">
         <div class="container">
