--- a/index.html
+++ b/index.html
@@ -187,5 +187,34 @@
     <script src="scripts/productos.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/formulario.js"></script>
+
+    <!-- Templates -->
+    <template id="producto-template">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img class="card-img-top" alt="nombre-producto">
+                <div class="card-body text-center">
+                    <h5 class="card-title">nombre-producto</h5>
+                    <p class="card-text">precio-producto</p>
+                    <button class="btn btn-primary">Agregar al Carrito</button>
+                </div>
+            </div>
+        </div>
+    </template>
+
+    <template id="carrito-item-template">
+        <div class="row mb-3">
+            <div class="col-4">
+                <img class="img-fluid" alt="nombre-producto">
+            </div>
+            <div class="col-4">
+                <h5>nombre-producto</h5>
+                <p>precio-producto</p>
+            </div>
+            <div class="col-4 text-end">
+                <button class="btn btn-danger">Eliminar</button>
+            </div>
+        </div>
+    </template>
 </body>
 </html>
