--- a/index.html
+++ b/index.html
@@ -218,12 +218,14 @@
             </div>
             <div class="col-4">
                 <h5>nombre-producto</h5>
-                <p class="font-weight-bold">precio-producto</p>
+                <p>precio-producto</p>
             </div>
             <div class="col-4 text-end">
                 <button class="btn btn-danger">Eliminar</button>
             </div>
         </div>
     </template>
+    
+    
 </body>
 </html>
